home left column

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: home
+video: dJtx97kORFU
 ---
+
+## About the project
 
 OpenBudgets is an EU funded project, aiming at supporting journalists, civil society organisations, NGOs, citizens and public administrations, by providing an overview of public spending, as well as tools and appropriate data and stories to advocate and fight for fiscal transparency.
